tests/checker/bad/unserializable_param.scilla
scilla_version 0

(***************************************************)
(*               Associated library                *)
(***************************************************)

library UnserializableADT

type Test =
  | Bad of (Uint32 -> Uint32)

(***************************************************)
(*             The contract definition             *)
(***************************************************)
contract UnstorableADT
(
)

transition BadADTTrans (p : Test)
end

transition BadPrimTrans (p : Message)
end